--- a/www/pages/presentation.html
+++ b/www/pages/presentation.html
@@ -60,6 +60,7 @@
                 mycket om mina vänner & familj. Jag gjorde det förr också, men i en betydligt större utsträckning idag än då.
             </p>
             
+            <a name="pic1"><img src="../pics/me1.jpeg" width="200" height="175"></a>
             <p>
                 Ett av mina andra stora intresse är TV-Serier. Jag vet inte hur många serier jag har sett under mina år, man kan säga att jag har tappat räkningen för längesedan. 
                 Ett tag följde jag nog 5 serier samtidigt, så det blev ganska svårt att hålla koll på vilken som var vilken till slut. Vilket ledde till att jag tappade suget för 
