--- a/www/pages/laborationer.html
+++ b/www/pages/laborationer.html
@@ -14,7 +14,7 @@
         <ul>
             <li><a href="../index.html">Start</a></li>
             <li><a href="laborationer.html">Laborationer</a></li>
-            <li><a href="presentation.html">Presentation</a></li>
+            <li><a href="presentation.html#pic1">Presentation</a></li>
             <li><a href="kontakt.html">Kontakt</a></li>
             </li>
         </ul>
@@ -55,7 +55,7 @@
             </dl>
             <li>Länkar & listor</li>
             <li>Bilder</li>
-            <li>Video</li>
+            <a href="../index.html#video1"><li>Video</li></a>
             
             
         </ol>
