--- a/www/pages/laborationer.html
+++ b/www/pages/laborationer.html
@@ -134,7 +134,7 @@
                 <dt>Vilken är den relativa sökvägen från filen top.html till bottom.html?</dt>
                     <dd>Svar: bottom.html</dd>
                 <dt>Vilken är den relativa sökvägen från filen index.html till top.html?</dt>
-                    <dd>Svar: pages/html/top.html</dd>
+                    <dd>Svar: html/pages/top.html</dd>
             </dl>
             
             <li>Länkar & listor</li>
