--- a/www/pages/kontakt.html
+++ b/www/pages/kontakt.html
@@ -30,7 +30,7 @@
                 <option value="Support">Support</option>
             </select>
             <br>
-            Meddelande: <textarea rows="5" cols="30"></textarea>
+            Meddelande: <textarea rows="5" cols="30" name="Meddelande"></textarea>
             
         </fieldset>
         
