--- a/www/pages/presentation.html
+++ b/www/pages/presentation.html
@@ -5,7 +5,9 @@
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
+
     <link rel="stylesheet" href="../css/style.css">
+<link rel="stylesheet" href="../css/print.css">
 
         <title>Mathias Sundin</title>
     </head>
@@ -80,9 +82,7 @@
             <a name="pic1"><img src="../pics/me1.jpeg" width="200" height="175"></a>
             <p>
                 Ett av mina andra stora intresse är TV-Serier. Jag vet inte hur många serier jag har sett under mina år, man kan säga att jag har tappat räkningen för längesedan. Ett tag följde jag nog 5 serier samtidigt, så det blev ganska svårt att hålla koll på vilken som var vilken till slut. Vilket ledde till att jag tappade suget för  en del utav dom & sluta följa dom. Min topp3-lista för serier jag har sett består av: Band of Brothers, Lost & Weeds.
-                Även musik är ett mycket stort intresse för mig - jag tycker att musik kan påverka oss olika lägen & situationer vi befinner oss i. Sen jobbar jag även som DJ
-                på tillställningar ibland. En av mina drömmar är att spela på en stor housefestival, men då jag lägger för lite tid på spelningar så får jag vara glad för de
-                spelningar jag gör. 
+                Även musik är ett mycket stort intresse för mig - jag tycker att musik kan påverka oss olika lägen & situationer vi befinner oss i. Sen jobbar jag även som DJ på tillställningar ibland. En av mina drömmar är att spela på en stor housefestival, men då jag lägger för lite tid på spelningar så får jag vara glad för de spelningar jag gör. 
                 Data/TV-Spel är en stor passion. Förr vågade man inte tala om det på samma sätt som idag, & det beror väll på att E-Sporten har blivit mer accepterad i vårt samhälle idag än tidigare. Spelen jag spelar är CS:GO & SC2:Hots, FM-serien, men det spel jag nog har lagt flest timmar på är FIFA. Även det spel som har gett mig mest blåmärken på benen, då det är så stor prestige när man möter sina vänner. Så när man släpper in ett mål eller förlorar så slår man till sig själv. 
                 
             </p>
