--- a/www/index.html
+++ b/www/index.html
@@ -4,8 +4,9 @@
 
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-
+    
     <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/print.css">
 
         <title>Mathias Sundin </title>
     </head>
