--- a/www/pages/laborationer.html
+++ b/www/pages/laborationer.html
@@ -6,6 +6,7 @@
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
     <link rel="stylesheet" href="../css/style.css">
+<link rel="stylesheet" href="../css/print.css">
 
         <title>Mathias Sundin</title>
     </head>
