Add work to mainsite

--- a/www/index.html
+++ b/www/index.html
@@ -56,6 +56,10 @@
 
         <div id="content">
         
+        <h2>Lorem Ipsum 3.3 (Copycat)</h2>
+        <p>Har skrivit ett .css dokument för ett redan skrivet .html dokument.
+            Resultatet blev följande: <a href="https://uppgift-3-3-c9-mathiassundin_3.c9.io/?_c9_id=livepreview3&_c9_host=https://ide.c9.io#">Klicka här!</a>
+        </p>
         
         <h2>Lorem Ipsum</h2>
         <img class="right" src="pics/turtle.jpg" width="155" height="185" alt="Tecknad sköldpadda">
