--- a/www/pages/kontakt.html
+++ b/www/pages/kontakt.html
@@ -37,10 +37,10 @@
 
 <div id="head3"><h3>MENY</h3></div>
         <ul id="menyli">
-            <li><a href="../index.html">Start</a></li>
-            <li><a href="laborationer.html">Laborationer</a></li>
-            <li><a href="presentation.html">Presentation</a></li>
-            <li class="active"><a href="kontakt.html">Kontakt</a></li>
+            <li><a class="index" href="../index.html">Start</a></li>
+            <li><a class="laborationer" href="laborationer.html">Laborationer</a></li>
+            <li><a class="presentation" href="presentation.html">Presentation</a></li>
+            <li class="active"><a class="kontakt" href="kontakt.html">Kontakt</a></li>
         
         </ul>
         
